// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentTypeStepController > constructor > inits options 1`] = `
[
  {
    "label": "Agent public d’une administration centrale (État)",
    "value": "CENTRAL_ADMIN",
  },
  {
    "label": "Agent public d’une administration déconcentrée (État)",
    "value": "DECONCENTRATED",
  },
  {
    "label": "Agent public d’une collectivité territoriale",
    "value": "TERRITORIAL_COLLECTIVITY",
  },
  {
    "label": "Agent public d’un opérateur de l’État",
    "value": "OPERATOR",
  },
  {
    "label": "Aucune des propositions ci-dessus",
    "value": "none",
  },
]
`;

exports[`AgentTypeStepController > onUpdate - case 'error' > updates errorMessage store 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "Data.Subvention est réservé aux agents publics. Pour toute question, vous pouvez nous contacter à <a href="mailto:contact@datasubvention.beta.gouv.fr">contact@datasubvention.beta.gouv.fr</a>",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`AgentTypeStepController > onUpdate - case 'valid' > updates errorMessage store 1`] = `
[MockFunction spy] {
  "calls": [
    [
      "",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
